--- a/css/common.css
+++ b/css/common.css
@@ -22,3 +22,17 @@ button {
   padding: 8px 12px;
   cursor: pointer;
 }
+
+.gallery {
+  padding: 0;
+  display: flex;
+  justify-content: space-between;
+}
+
+.gallery__item {
+  list-style: none;
+}
+
+.gallery__img {
+  width: 300px;
+}
